--- a/src/components/SectionWithPhoto/SectionWithPhotoContent/SectionWithPhotoContent.css
+++ b/src/components/SectionWithPhoto/SectionWithPhotoContent/SectionWithPhotoContent.css
@@ -5,14 +5,14 @@
   font-weight: 400;
 }
 
-.SectionWithPhotoContent-preTitle {
-  padding: 4px 12px;
-  display: inline-block;
-  font-size: 14px;
-  color: #2A2C1F;
-  background-color: #E7E8E3;
-  border-radius: 50px;
-}
+/*.SectionWithPhotoContent-PreTitle {*/
+/*  padding: 4px 12px;*/
+/*  display: inline-block;*/
+/*  font-size: 14px;*/
+/*  color: #2A2C1F;*/
+/*  background-color: #E7E8E3;*/
+/*  border-radius: 50px;*/
+/*}*/
 
 .SectionWithPhotoContent-title { 
   margin: 20px 0;
