--- a/src/components/BlockLatestPosts/BlockLatestPosts.css
+++ b/src/components/BlockLatestPosts/BlockLatestPosts.css
@@ -1,3 +1,13 @@
-.BlockLatestPosts{
+.BlockLatestPosts {
     padding: 128px 0;
+}
+
+.BlockLatestPosts-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end
+}
+
+.BlockLatestPostsItems {
+    margin-top: 80px;
 }
