--- a/src/components/BlockLatestPosts/BlockLatestPostsItem/BlockLatestPostsItem.css
+++ b/src/components/BlockLatestPosts/BlockLatestPostsItem/BlockLatestPostsItem.css
@@ -27,9 +27,15 @@
 .BlockLatestPostsItem_header {
     margin-bottom: 16px;
     display: flex;
+    align-items: center;
     gap: 16px;
 }
-.BlockLatestPostsItem_preTitle {
+.BlockLatestPostsItem_header_preTitle {
+    padding: 4px 8px;
+    max-width: 62px;
+    background: #FAE8E1;
+    border-radius: 32px;
+    text-align: center;
 }
 .BlockLatestPostsItem_title {
     margin-bottom: 9px;
