--- a/src/components/DarkBlock/DarkBlock.css
+++ b/src/components/DarkBlock/DarkBlock.css
@@ -1,8 +1,9 @@
 .DarkBlock {
+    padding: 88px 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 95px 256px;
+    gap: 25px;
     background: #65665C;
     border-radius: 24px;
 }
