--- a/src/components/HeaderBlock/HeaderBlock.css
+++ b/src/components/HeaderBlock/HeaderBlock.css
@@ -1,24 +1,39 @@
 
 .HeaderBlock {
-    padding-right: 12%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-family: 'Roboto';
     font-weight: 400;
     color: #2A2C1F;
 }
 
 .preTitleDiv {
+    margin-bottom: 20px;
+    padding: 4px 12px;
     font-size: 14px;
     line-height: 21px;
+    background: #E7E8E3;
+    border-radius: 32px;
 }
 
 .sectionTitle {
     margin: 0 0 21px;
-    font-size: 56px;
+    /*font-size: 56px;*/
     line-height: 67px;
 }
-
+.sectionTitle-light {
+    color: #FFFFFF;
+}
 .description {
+    max-width: 736px;
     font-size: 20px;
     line-height: 30px;
     color: #65665C;
+}
+.description-center{
+    text-align: center;
+}
+.description-light{
+    color: #E7E8E3;
 }
